--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/server.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "celebrate": "^12.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "cross-env": "^7.0.2",
+    "express": "^4.17.1",    
     "knex": "^0.20.13",
     "morgan": "^1.10.0",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "jest": "^25.2.4",
+    "supertest": "^4.0.2"
   }
 }
